force-app/main/default/objects/Conversion_Summary__c/Conversion_Summary__c.object-meta.xml
<CustomObject>
    <label>Conversion Summary</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Conversion Summary No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversion Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>