force-app/main/default/objects/Conversion_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conversion Summaries</relationshipLabel>
    <relationshipName>Conversion_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>