force-app/main/default/objects/Conversion_Summary__c/fields/Last_Converted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Converted_Date_Time__c</fullName>
    <label>Last Converted Date/Time</label>
    <type>DateTime</type>
</CustomField>