force-app/main/default/objects/Conversion_Summary__c/fields/Producer_Account__c.field-meta.xml
<CustomField>
    <fullName>Producer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conversion Summaries (Producer Account)</relationshipLabel>
    <relationshipName>Conversion_Summaries1</relationshipName>
    <type>Lookup</type>
</CustomField>