force-app/main/default/objects/Conversion_Summary__c/fields/Registration_Detail__c.field-meta.xml
<CustomField>
    <fullName>Registration_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Detail</label>
    <referenceTo>Registration_Detail__c</referenceTo>
    <relationshipLabel>Conversion Summaries</relationshipLabel>
    <relationshipName>Conversion_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>