force-app/main/default/objects/Conversion_Summary__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <label>Total Units</label>
    <summarizedField>Conversion_Data__c.Units__c</summarizedField>
    <summaryForeignKey>Conversion_Data__c.Conversion_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>